application/sample-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: koncepts
  name: koncepts
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: koncepts
---
apiVersion: v1
kind: Service
metadata:
  name: koncepts-headless
spec:
  clusterIP: None
  selector:
    app: koncepts
  type: ClusterIP
